--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,8 +77,8 @@ footer {
 }
 
 .upcoming ul {
-  list-style: none;
-  padding: 0;
+  list-style: disc;
+  padding: 1.5rem;
   max-width: 600px;
   margin: 0 auto;
 }
